<resources>
    <string name="app_name">ProjectFikli</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="clear">C</string>
    <string name="pangkat">^</string>
    <string name="kurung">( )</string>
    <string name="bagi">÷</string>
    <string name="kali">×</string>
    <string name="kurang">-</string>
    <string name="tambah">+</string>
    <string name="plusMinus">±</string>
    <string name="point">.</string>
    <string name="hasil">=</string>

    <string name="backspace"> </string>
    <string name="display">Enter in a value</string>

</resources>